# cboggle

./: .gitignore  CMakeLists.txt  Makefile  README.rst  board.c  board.h  boggle.h  check.c  check.h  checker.c  checkword.c  dict.c  dict.h  static-maker  ui.c  utils.c
make-dawg/: Blitzkrieg_Trie_Attack_Dawg_Creator_Custom_Character_Set.c  Compile-CRC-32-Lookup-Table.c  Makefile  README.rst  Word-List.txt
